# mcp-neo4j

./: .gitignore  CLAUDE.md  README-MCP-Servers.md  README.md  gemini-extension.json  mcp-neo4j.code-workspace  mcp_neo4j_35_runner.py
servers/common/: CHANGELOG.md  Makefile  README.md  pyproject.toml
servers/common/tests/: conftest.py
servers/mcp-neo4j-memory/: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER_COMPOSE_TESTS_UPDATE_README.md  DOCKER_UPDATES_SUMMARY.md  Dockerfile  MCP_Setup_Examples.md  README.md  README_QUICKSTART.md  REFACTORING_SUCCESS.md  Refactoring.md  SESSION_MEMORY.md  SETUP.md  USAGE.md  count_nodes.py  debug_test.py  pyproject.toml  pytest.ini  ruff.toml  server.json  test_manual_optimized.py
servers/mcp-neo4j-memory/docker/: Dockerfile  Dockerfile_sse  Dockerfile_stdio  Dockerfile_test  README.md  docker-compose.mcp-compliance.yml  docker-compose.prod.yml  docker-compose.test.override.yml  docker-compose.test.yml  docker-compose.yml
servers/mcp-neo4j-memory/docs/: WORLD_MODEL_SCHEMA.md
servers/mcp-neo4j-memory/examples/: claude-desktop.json  claude-sse-config-example1.json  claude-stdio-docker-config-example1.json  claude-stdio-docker-config-example2.json  claude-stdio-local-config-example1.json  claude-stdio-local-config-example2.json  sse-config.yaml  stdio-config.yaml
servers/mcp-neo4j-memory/scripts/: README.md  build.bat  build.sh  publish.bat  publish.sh  test.bat  test.sh
servers/mcp-neo4j-memory/test-results/: .gitignore
servers/mcp-neo4j-memory/tests/: README.md  run_all_tests.py  (+14 more)
(+142 files in other folders)
